# resumex

./: .blackignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/actions/install/: action.yml
.github/workflows/: test.yml
src/resumex/: main.py
src/resumex/config/: __init__.py  constants.py  logging.conf
src/resumex/core/cli/: __init__.py  cli.py  template.py  xp.py
src/resumex/core/di/: __init__.py  provider.py  service_provider.py
src/resumex/core/models/: __init__.py  company.py  contact.py  education.py  experience.py  resume.py  skill.py
src/resumex/core/services/: __init__.py  file_service.py  json_service.py  template_service.py
src/resumex/core/services/backup/: __init__.py  backup.py  backup_service.py
src/resumex/templates/: default.tex  template.py
tests/: conftest.py  test_backup_service.py  test_template_service.py
tests/config/: __init__.py  constants.py  paths.py
tests/fixtures/: default.tex
tests/seed/: resume.json
