[project]
name = "resumex"
version = "0.1.0"
description = "Make your resume from LaTeX templates"
authors = [
    {name = "Valentin Lafage",email = "vlafage.dev@free.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "resume", "cv", "python", "latex" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
]

[project.urls]
repository = "https://github.com/valentin-lafage/resumex"
"Bug Tracker" = "https://github.com/valentin-lafage/resumex/issues"

[tool.poetry]
packages = [{include = "resumex", from = "src"}]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[tool.black]
target-version = ['py39']
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
